--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,11 @@
 
     <groupId>xyz.yufeiii</groupId>
     <artifactId>yufei_blog</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>xyz_yufeiii_yufei_blog_dao</module>
+    </modules>
 
 
 </project>
